@@ -1,7 +1,17 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 3,
+  "uniques": 3,
   "clones": [
+    {
+      "timestamp": "2026-01-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2026-01-17T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
     {
       "timestamp": "2026-01-18T00:00:00Z",
       "count": 1,
@@ -59,16 +69,6 @@
     },
     {
       "timestamp": "2026-01-29T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-30T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-31T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
